cmake_minimum_required(VERSION 3.9)
project(Cpp2018)

set(CMAKE_CXX_STANDARD 11)

add_executable(Cpp2018 Wyraz/Wyrazenie.h Wyraz/main.cpp Wyraz/Liczba.cpp Wyraz/Liczba.h Wyraz/Const.h Wyraz/Pi.cpp Wyraz/Pi.h Wyraz/E.cpp Wyraz/E.h Wyraz/Fi.cpp Wyraz/Fi.h Wyraz/Zmienna.cpp Wyraz/Zmienna.h Wyraz/Unary.h Wyraz/Sin.cpp Wyraz/Sin.h Wyraz/Cos.cpp Wyraz/Cos.h Wyraz/Exp.cpp Wyraz/Exp.h Wyraz/Ln.cpp Wyraz/Ln.h Wyraz/Abs.cpp Wyraz/Abs.h Wyraz/Opos.cpp Wyraz/Opos.h Wyraz/Rev.cpp Wyraz/Rev.h Wyraz/Binary.cpp Wyraz/Binary.h Wyraz/Add.cpp Wyraz/Add.h Wyraz/Sub.cpp Wyraz/Sub.h Wyraz/Mul.cpp Wyraz/Mul.h Wyraz/Div.cpp Wyraz/Div.h Wyraz/Mod.cpp Wyraz/Mod.h Wyraz/Pow.cpp Wyraz/Pow.h Wyraz/Log.cpp Wyraz/Log.h)